--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,40 @@
-h1 {
+h1, h2 {
     font-family: Helvetica;
+    text-align: center;
+}
+
+body {
+    background-color: black;
+    color: white;
+}
+
+img {
+    display: block;
+    margin: auto;
+}
+
+
+.home {
+    list-style-type: none;
+}
+
+.down {
+    margin-top: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: bisque;
+}
+
+p {
+    text-align: center;
+}
+
+.center {
+    text-align: center;
 }
