Add media query for smaller widths and add left margin to H2s

--- a/styles.css
+++ b/styles.css
@@ -42,4 +42,12 @@ p {
     text-align: center;
 }
 
+@media (max-width: 600px) {
+    img {
+        width: 80%;
+    }
+}
 
+.leftpush {
+    margin-left: 20px;
+}
