--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
 h1, h2 {
-    font-family: Helvetica;
+    font-family: Helvetica, "Times New Roman", sans-serif;
 }
 
 h1, .desc {
@@ -7,7 +11,7 @@ h1, .desc {
 }
 
 body {
-    background-color: black;
+    background-color: #14214d;
     color: white;
 }
 
@@ -19,10 +23,13 @@ img {
 
 .home {
     list-style-type: none;
+    font-size: 15px;
+    font-family: Monospace;
+    margin-top: 2px;
 }
 
 .down {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 a {
@@ -31,7 +38,7 @@ a {
 }
 
 a:hover {
-    color: bisque;
+    color: #db4b35;
 }
 
 p {
@@ -58,10 +65,20 @@ p {
     margin-left: 20px;
 }
 
-ol li {
+ol li, ul li {
     margin-bottom: 5px;
 }
 
-ul li {
-    margin-bottom: 2px;
+ul, ol {
+    display: inline-block;
+    text-align: left;
+}
+
+.center-list {
+    text-align: center;
+}
+
+#gif {
+    width: 300px;
+    margin-bottom: 20px;
 }
